Home/homeStyles.css
body {
    margin: 0px;
}
header, header table {
    height: 75px;
    width: 100%;
    text-align: center;
    padding: 5px;
}

td {
    width: 33.3333%;
}
button {
    width: 100%;
    height: 100%;
}
.opened {
    border: 2px solid black;
}
iframe {
    width: 100%;
    height: calc(100% - 85px);
}

